==> wbasser/CommonSoftwareFramework/HAL/Microchip/SAM4/I2C/Core/Trunk/I2c.c <==
#include "I2C/I2c.h"
#include "I2C/I2c_prm.h"
#include "Clock/Clock.h"
#include "SystemTick/SystemTick.h"
  #include "DebugManager/DebugManager.h"
#define BAUD_RATE_SLOW          ( 100000l )
#define BAUD_RATE_FAST          ( 400000l )
#define CLOCK_DIVIDER           ( 2 )
#define CLOCK_CALC_ARGU         ( 4 )
#define CLOCK_DIV_MAX           ( 0xFF )
#define CLOCK_DIV_MIN           ( 7 )
#define PDC_MIN_RCV_BYTE_COUNT  ( 3 )
#define LCLCTLS_SIZE    sizeof( LCLCTLS )

BOOL I2c_Initialize( void )
{
  PI2CDEF       ptDef;
  I2CDEVENUM    eDev;
  PLCLCTL       ptCtl;
  U32           uTemp;
  
  // for each device
  for ( eDev = 0; eDev < I2C_DEV_ENUM_MAX; eDev++ )
  {
    // get pointer to the definition structure
    ptDef = ( PI2CDEF )&g_atI2cDefs[ eDev ];
    ptCtl = &atLclCtls[ eDev ];
    GetTwiChannel( ptDef->eChan, ptCtl );

    // disable all interrupts/dummy read of status
    ptCtl->ptTwi->TWI_IDR = 0xFFFFFFFF;
    uTemp = ptCtl->ptTwi->TWI_SR;
    
    // reset the device
    ptCtl->ptTwi->TWI_CR = TWI_CR_SWRST;
    uTemp = ptCtl->ptTwi->TWI_RHR;
    
    // enable the master mode
    ptCtl->ptTwi->TWI_CR = TWI_CR_MSDIS;
    ptCtl->ptTwi->TWI_CR = TWI_CR_SVDIS | TWI_CR_MSEN;
    
        // now set the baudrate
    uTemp = ( ptDef->bFastSpeed ) ? BAUD_RATE_FAST : BAUD_RATE_SLOW;
    SetBaudrateClock( ptCtl->ptTwi, uTemp );

    // map physical to logical
    aePhyToDefMap[ ptDef->eChan ] = eDev;
    
    // enable the interrupt in the NVIC
    NVIC_EnableIRQ( TWI0_IRQn + ptDef->eChan );
  }

  // return no errors
  return( FALSE );
}

I2CERROR I2c_Write( I2CDEVENUM eDev, PI2CXFRCTL ptXfrCtl )
{
  I2CERROR 	    eError = I2C_ERROR_NONE;
  PI2CDEF 	  ptDef;
  PLCLCTL 	  ptCtl;
  U32         uTime;  
  BOOL        bError;

  // check for a valid I2C
  if ( eDev < I2C_DEV_ENUM_MAX )
  {
    // get pointer to the definition structure
    ptDef = ( PI2CDEF )&g_atI2cDefs[ eDev ];
    ptCtl = &atLclCtls[ eDev ];
    
    // copy the values to the local controls
    ptCtl->pnData = ptXfrCtl->pnData;
    ptCtl->wCurLen = ptXfrCtl->wDataLen;
    ptCtl->wBufIdx = 0;

    // clear the error 
    ptCtl->eError = I2C_ERROR_NONE;
    
    // set the address size/device address
    ptCtl->ptTwi->TWI_MMR = 0;
    ptCtl->ptTwi->TWI_MMR = TWI_MMR_DADR( ptXfrCtl->nDevAddr ) | BITS( ptXfrCtl->nAddrLen, TWI_MMR_IADRSZ_Pos ) | TWI_MMR_MREAD;
    ptCtl->ptTwi->TWI_MMR &= ~TWI_MMR_MREAD;

    #if ( I2C_ENABLE_DEBUG == 1 )
    DebugManager_AddElement( I2C_DEBUG_BASE_VALUE + 1, ( ptXfrCtl->nDevAddr << 8 ) | ( ptXfrCtl->wDataLen + ptXfrCtl->nAddrLen ));
    #endif // I2C_ENABLE_DEBUG

    // now write the address with read bit cleared
    if ( ptXfrCtl->nAddrLen > 0 )
    {
      // set the address
      ptCtl->ptTwi->TWI_IADR = 0;
      ptCtl->ptTwi->TWI_IADR = ptXfrCtl->tAddress.uValue;
    }

    // only use PDC if length is greater/equal to 2
    if ( ptCtl->wCurLen >= 2 )
    {
      // set up the transmit pointer/length
      ptCtl->ptPdc->PERIPH_TPR = ( U32 )ptCtl->pnData;
      ptCtl->ptPdc->PERIPH_TCR = ptCtl->wCurLen - 1;
      ptCtl->wBufIdx = ptCtl->wCurLen - 1;

      // enable the ENDTX interrupt
      ptCtl->ptTwi->TWI_IER = TWI_IER_ENDTX;

      // set running flag
      ptCtl->bRunning = TRUE;
      ptCtl->eError = I2C_ERROR_NONE;

      // start the transfer
      ptCtl->ptPdc->PERIPH_PTCR = PERIPH_PTCR_TXTEN;

      // check for a blocking device
      if ( ptDef->pvCallBack == NULL )
      {
        // calculate the new time
        uTime = SystemTick_GetTimeMsec( ) + ptXfrCtl->uTimeout;

        // wait till done or timeout
        while( ptCtl->bRunning )
        {
          // check for timeout
          if ( SystemTick_GetTimeMsec( ) >= uTime )
          {
            // timeout occured - flag error
            ptCtl->eError = I2C_ERROR_TIMEOUT;
            ptCtl->bRunning = FALSE;
          }
        }

        // disable interrupts/clear running flag
        ptCtl->bRunning = FALSE;
        ptCtl->ptTwi->TWI_IER = 0;

        // set the return error
        eError = ptCtl->eError;
      }
      else
      {
        // set the error to busy
        eError = I2C_ERROR_BLKING;
      }
    }
    else
    {
      // write single byte/wait for ready
      ptCtl->ptTwi->TWI_THR = *( ptCtl->pnData + ptCtl->wBufIdx++ );
      if ( !WaitStatusReady( ptCtl->ptTwi, TWI_SR_TXRDY, 50000 ))
      {
        // send stop
        ptCtl->ptTwi->TWI_CR = TWI_CR_STOP;

        // wait for txcomp/ready
        if ( !WaitStatusReady( ptCtl->ptTwi, TWI_SR_TXRDY, 50000 ))
        {
          // now wait for TXCOMp
          if( WaitStatusReady( ptCtl->ptTwi, TWI_SR_TXCOMP, 50000 ))
          {
            // set timeout
            ptCtl->eError = I2C_ERROR_TIMEOUT;
          }
        }
        else
        {
          // set timeout
          ptCtl->eError = I2C_ERROR_TIMEOUT;
        }
      }
      else
      {
        // set timeout
        ptCtl->eError = I2C_ERROR_TIMEOUT;
      }
    }
  }
  else
  {
    // illegal device
    eError = I2C_ERROR_ILLDEV;
  }

  #if ( I2C_ENABLE_DEBUG == 1 )
  DebugManager_AddElement( I2C_DEBUG_BASE_VALUE + 2, eError );
  #endif // I2C_ENABLE_DEBUG
  // return the status
  return( eError );
}

I2CERROR I2c_Read( I2CDEVENUM eDev, PI2CXFRCTL ptXfrCtl )
{
  I2CERROR      eError = I2C_ERROR_NONE;
  PI2CDEF     ptDef;
  PLCLCTL     ptCtl;
  U32         uTime, uCrValue;  
  
  // check for a valid I2C
  if ( eDev < I2C_DEV_ENUM_MAX )
  {
    ptDef = ( PI2CDEF )&g_atI2cDefs[ eDev ];
    ptCtl = &atLclCtls[ eDev ];
    
    // copy the values to the local controls
    ptCtl->pnData = ptXfrCtl->pnData;
    ptCtl->wCurLen = ptXfrCtl->wDataLen;
    ptCtl->wBufIdx = 0;

    // set the running flag/direction/state
    ptCtl->bRunning = TRUE;
    ptCtl->eError = I2C_ERROR_NONE;
    
    // set the address size/device address
    ptCtl->ptTwi->TWI_MMR = TWI_MMR_DADR( ptXfrCtl->nDevAddr ) | BITS( ptXfrCtl->nAddrLen, TWI_MMR_IADRSZ_Pos ) | TWI_MMR_MREAD;

    #if ( I2C_ENABLE_DEBUG == 1 )
    DebugManager_AddElement( I2C_DEBUG_BASE_VALUE + 3, ( ptXfrCtl->nDevAddr << 8 ) | ( ptXfrCtl->wDataLen + ptXfrCtl->nAddrLen ));
    #endif // I2C_ENABLE_DEBUG
    // now write the address with read bit cleared
    if ( ptXfrCtl->nAddrLen > 0 )
    {
      // set the address
      ptCtl->ptTwi->TWI_IADR = ptXfrCtl->tAddress.uValue;
    }

    // now determine PDB or direct
    if ( ptCtl->wCurLen < PDC_MIN_RCV_BYTE_COUNT )
    {
      // set the CR value
      uCrValue = TWI_CR_START;
      uCrValue |= ( ptCtl->wCurLen == 1 ) ? TWI_CR_STOP : 0;
      ptCtl->ptTwi->TWI_CR = uCrValue;

      // wait for RXRDY
      if ( !WaitStatusReady( ptCtl->ptTwi, TWI_SR_RXRDY, 50000 ))
      {
        // read and store the data
        *( ptCtl->pnData + ptCtl->wBufIdx++ ) = ptCtl->ptTwi->TWI_RHR;

        // decrement the count
        if ( --ptCtl->wCurLen == 1 )
        {
          // issue stop
          ptCtl->ptTwi->TWI_CR = TWI_CR_STOP;
      
          // wait for ready	  
          if ( !WaitStatusReady( ptCtl->ptTwi, TWI_SR_RXRDY, 50000 ))
          {
            // read and store the data
            *( ptCtl->pnData + ptCtl->wBufIdx++ ) = ptCtl->ptTwi->TWI_RHR;
          }
          else
          {
            // set timeout
            ptCtl->eError = I2C_ERROR_TIMEOUT;
          }
        }
      }
      else
      {
        // set timeout
        ptCtl->eError = I2C_ERROR_TIMEOUT;
      }
    }
    else
    {
      // set the PDC pointer/count/enable
      ptCtl->ptPdc->PERIPH_RPR = ( U32 )ptCtl->pnData;
      ptCtl->ptPdc->PERIPH_RCR = ptCtl->wCurLen - 2;
      ptCtl->ptPdc->PERIPH_PTCR = PERIPH_PTCR_RXTEN;
      ptCtl->wBufIdx = ptCtl->wCurLen - 2;

      // enable the interrupt
      ptCtl->ptTwi->TWI_IER = TWI_IER_ENDRX | TWI_IER_NACK;

      // start the transfer
      ptCtl->ptTwi->TWI_CR = TWI_CR_START;

      // check for a blocking device
      if ( ptDef->pvCallBack == NULL )
      {
        uTime = SystemTick_GetTimeMsec( ) + ptXfrCtl->uTimeout;
        while( ptCtl->bRunning )
        {
          // check for timeout
          if ( SystemTick_GetTimeMsec( ) >= uTime )
          {
            // timeout occured - flag error
            ptCtl->bRunning = FALSE;
            ptCtl->eError = I2C_ERROR_TIMEOUT;
          }
        }

        // disable interrupts
        ptCtl->ptTwi->TWI_IER = 0;
      
        // set the return error
        eError = ptCtl->eError;
      }
      else
      {
        // set the error to busy
        eError = I2C_ERROR_BLKING;
      }
    }
  }
  else
  {
    // illegal device
    eError = I2C_ERROR_ILLDEV;
  }
  
  #if ( I2C_ENABLE_DEBUG == 1 )
  DebugManager_AddElement( I2C_DEBUG_BASE_VALUE + 4, eError );
  #endif // I2C_ENABLE_DEBUG

  // return the error
  return(( I2CERROR )eError );
}

I2CERROR I2c_Ioctl( I2CDEVENUM eDev, I2CACTION eAction, PVOID pvData )
{
  I2CERROR      eError = I2C_ERROR_NONE;
  PLCLCTL     ptCtl;
  PU32        puData;
  U32         uValue;
  PI2CCHKBSY  ptBusyParams;

  // set the pointer to avoid compiler errors
  puData = ( PU32 )pvData;
  
  // check for a valid I2C
  if ( eDev < I2C_DEV_ENUM_MAX )
  {
    // get pointers to the control/def structure
    ptCtl = &atLclCtls[ eDev ];

    // process the action
    switch( eAction )
    {
      case I2C_ACTION_POLL_DEVICE :
        // get the parameters
        ptBusyParams = ( PI2CCHKBSY )pvData;

        // read status/set the address/issue a start/check for NACK
        ptCtl->ptTwi->TWI_IADR = 0;
        uValue = TWI_MMR_DADR( ptBusyParams->nDevAddr );
//        uValue |= ( ptBusyParams->bReadMode ) ? TWI_MMR_MREAD : 0;
        uValue |= TWI_MMR_MREAD;
        ptCtl->ptTwi->TWI_MMR = uValue;
        ptCtl->ptTwi->TWI_CR = TWI_CR_START | TWI_CR_STOP;

        // wait for ready	  
        if ( WaitStatusReady( ptCtl->ptTwi, TWI_SR_RXRDY, 10000 ))
        {
          // set the error to SLVNAK
          eError = I2C_ERROR_SLVNAK;
        }
        else
        {
          // do a dummy read of the data/status
          uValue = ptCtl->ptTwi->TWI_RHR;
          uValue = ptCtl->ptTwi->TWI_SR;
        }
        
        #if ( I2C_ENABLE_DEBUG == 1 )
        DebugManager_AddElement( I2C_DEBUG_BASE_VALUE + 5, eError );
        #endif // I2C_ENABLE_DEBUG
      break;

      case I2C_ACTION_SET_DEVADDR :
        break;
        
      case I2C_ACTION_GET_DEVADDR :
        break;
        
      default :
        // illegal action
        eError = I2C_ERROR_ILLACT;
        break;
    }
  }
  else
  {
    // illegal device
    eError = I2C_ERROR_ILLDEV;
  }
  
  // return the error
  return( eError );
}
